# videocards

OpenCL/: CMakeLists.txt  README.MD  cl_util.c  cl_util.h  constants.c  constants.h  lab1.c  lab2.c  matrix_multiplication.c  matrix_multiplication.cl  matrix_multiplication.h  matrix_util.c  matrix_util.h  prefix_sum.c  prefix_sum.cl  prefix_sum.h  prefix_sum_util.c  prefix_sum_util.h
OpenMP/: OpenMP.sln
OpenMP/Practice/: Practice.c  Practice.vcxproj
